# byd_battery_box

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yaml
custom_components/byd_battery_box/: __init__.py  button.py  bydbox_const.py  bydboxclient.py  client_test.py  config_flow.py  const.py  extmodbusclient.py  hub.py  manifest.json  sensor.py
custom_components/byd_battery_box/translations/: en.json
